--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8000
 
 eureka:
   client:
@@ -18,8 +18,8 @@ spring:
         - id: first-service
           uri: http://localhost:8081/
           predicates:
-            - Path=/first-ervice/**
+            - Path=/first-service/**
         - id: second-service
-            uri: http://localhost:8082/
-            predicates:
-              - Path=/second-ervice/**
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
