--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,15 @@ spring:
           uri: http://localhost:8081/
           predicates:
             - Path=/first-service/**
+          # filter Add(key, value)
+          filters:
+            - AddRequestHeader=first-request, first-request-header2
+            - AddResponseHeader=first-response, first-response-header2
         - id: second-service
           uri: http://localhost:8082/
           predicates:
             - Path=/second-service/**
+          # filter Add(key, value)
+          filters:
+            - AddRequestHeader=second-request, second-request-header2
+            - AddResponseHeader=second-response, second-response-header2
