CustomFilter yml Add

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,13 +21,15 @@ spring:
             - Path=/first-service/**
           # filter Add(key, value)
           filters:
-            - AddRequestHeader=first-request, first-request-header2
-            - AddResponseHeader=first-response, first-response-header2
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+             - CustomFilter
         - id: second-service
           uri: http://localhost:8082/
           predicates:
             - Path=/second-service/**
           # filter Add(key, value)
           filters:
-            - AddRequestHeader=second-request, second-request-header2
-            - AddResponseHeader=second-response, second-response-header2
+#            - AddRequestHeader=second-request, second-request-header2
+#            - AddResponseHeader=second-response, second-response-header2
+             - CustomFilter
