customfilter yml add

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
           filters:
 #            - AddRequestHeader=first-request, first-request-header2
 #            - AddResponseHeader=first-response, first-response-header2
+             # CustomFilter
              - CustomFilter
         - id: second-service
           uri: http://localhost:8082/
@@ -32,4 +33,5 @@ spring:
           filters:
 #            - AddRequestHeader=second-request, second-request-header2
 #            - AddResponseHeader=second-response, second-response-header2
+             # CustomFilter
              - CustomFilter
