--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,24 +14,40 @@ spring:
   cloud:
     # zull 동일이며 비동기 서비스
     gateway:
+      # Gateway 공통 필터(전역 필터)
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring Cloud Gateway GlobalFilter
+            # 사전 logger
+            preLogger: true
+            # 사후 logger
+            postLogger: true
+      # MSA 라우팅 정의
+      # ID, 목적지(uri), 조건(Predicate), 필터로 구성된다.
       routes:
+        # ID
         - id: first-service
+          # 목적지
           uri: http://localhost:8081/
+          # 조건
           predicates:
             - Path=/first-service/**
           # filter Add(key, value)
           filters:
-#            - AddRequestHeader=first-request, first-request-header2
-#            - AddResponseHeader=first-response, first-response-header2
+          # - AddRequestHeader=first-request, first-request-header2
+          # - AddResponseHeader=first-response, first-response-header2
              # CustomFilter
              - CustomFilter
         - id: second-service
+          # 목적지
           uri: http://localhost:8082/
+          # 조건
           predicates:
             - Path=/second-service/**
           # filter Add(key, value)
           filters:
-#            - AddRequestHeader=second-request, second-request-header2
-#            - AddResponseHeader=second-response, second-response-header2
+          # - AddRequestHeader=second-request, second-request-header2
+          # - AddResponseHeader=second-response, second-response-header2
              # CustomFilter
              - CustomFilter
